add idempotency override header

--- a/impl/src/test/resources/log4j.properties
+++ b/impl/src/test/resources/log4j.properties
@@ -17,7 +17,7 @@
 #
 # The logging properties used during tests..
 #
-log4j.rootLogger=DEBUG, out
+log4j.rootLogger=DEBUG, file
 
 # CONSOLE appender not used by default
 log4j.appender.out=org.apache.log4j.ConsoleAppender
